# incognitoballots

./: Anchor.toml  Cargo.toml  package-lock.json  package.json
app/: index.html  package-lock.json  package.json  vite.config.ts
app/idl/: incognitoballots.json
app/public/: polyfills.js
app/src/: App.tsx  index.css  main.tsx
app/src/components/: Navbar.tsx
app/src/pages/: BrowseProposals.tsx  CreateProposal.tsx  Home.tsx  Results.tsx  Vote.tsx
app/src/utils/: program.ts
encrypted-ixs/src/: lib.rs
programs/incognitoballots/: Cargo.toml
programs/incognitoballots/src/: lib.rs
scripts/: upload-circuits.ts
tests/: incognitoballots.ts
