[package]
name = "incognitoballots"
version = "0.1.0"
description = "Incognito Ballots - Private Voting on Arcium"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "incognitoballots"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build", "arcium-anchor/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1", features = ["token"] }
arcium-anchor = "0.9.3"
arcium-macros = "0.9.3"
arcium-client = { version = "0.9.3", default-features = false }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
